code clean-up & bug fix